--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans&display=swap');
 
 body {
-  background:#181818;
+  background:#f2f2f2;
 }
 .wrapper{
   padding: 2rem;
   font-family: 'DM Sans', sans-serif;
-  color: #fefefe;
+  color: #222;
+}
+@media(max-width:480px){
+  .wrapper{
+    padding: 1rem;
+  }
 }
